k8s/intermediate/host-path-pv.yml
apiVersion: v1
kind: Pod
metadata:
  name: host-pvc-pod
spec:
  volumes:
    - name: ngx-pvc-vol
      persistentVolumeClaim:
        claimName: host-5m-pvc
  containers:
    - name: ngx-pvc-pod
      image: nginx:alpine
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 80
      volumeMounts:
        - mountPath: /tmp
          name: ngx-pvc-vol
