k8s/intermediate/ngx-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ngx-svc
  labels:
    app: ngx-svc

spec:
  selector:
    app: ngx-dep
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
